# myflix-nextjs-fastapi

./: .gitignore  README.md
backend/: .env  README.md  main.py  pyproject.toml  requirements.txt  run.py
backend/app/core/: config.py  logging.py  security.py
backend/app/models/: auth.py  generation.py
backend/app/routers/: auth.py  generation.py
backend/app/services/: auth_service.py  generation_service.py
frontend/: README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/auth/: AuthProvider.tsx  InputErrorMsg.tsx  LoginForm.tsx  RouteGuard.tsx
frontend/src/components/home/: GenerationConsole.tsx  Hero.tsx
frontend/src/components/home/Navbar/: AccountMenu.tsx  Navbar.tsx
frontend/src/components/home/Shows/: ScrollButton.tsx  ShowCard.tsx  ShowRow.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx
frontend/src/constants/: error.ts
frontend/src/lib/: api.ts  shows.ts  validation.ts
frontend/src/stores/: authStore.ts  generationStore.ts  showsStore.ts
frontend/src/styles/: globals.css
frontend/src/types/: auth.ts  generation.ts  shows.ts  validation.ts
