[project]
name = "myflix-backend"
description = "MyFlix Backend"
requires-python = "==3.11.13"
readme = "README.md"
dynamic = ["version"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
skip = [".venv/"]

[tool.flake8]
max-line-length = 88
select = ["C", "E", "F", "W", "B", "B950"]
extend-ignore = ["E203", "E501", "W503", "E712"]
extend-exclude = [".venv/", "../frontend/node_modules/"]
